--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -36,4 +36,5 @@
     <string name="bottom_nav_messages">メッセージ</string>
     <string name="view_store">ストアを表示</string>
     <string name="get_direction">道順を取得</string>
+    <string name="upload_image">画像をアップロード</string>
 </resources>
