--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="buyer">Buyer</string>
     <string name="seller">Seller</string>
     <string name="sign_in">Sign in</string>
-    <string name="dont_have_an_account">Don\'t have an account?</string>
+    <string name="dont_have_an_account">Dont have an account?</string>
     <string name="register_here">Register Here</string>
     <string name="fragment_seller">Seller</string>
     <string name="fragment_group_chat">Group Chat</string>
@@ -36,4 +36,5 @@
     <string name="bottom_nav_messages">Messages</string>
     <string name="view_store">View Store</string>
     <string name="get_direction">Get Direction</string>
+    <string name="upload_image">Upload Image</string>
 </resources>
