--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -37,4 +37,5 @@
     <string name="view_store">ストアを表示</string>
     <string name="get_direction">道順を取得</string>
     <string name="upload_image">画像をアップロード</string>
+    <string name="store_list_title">店舗一覧</string>
 </resources>
