--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -37,4 +37,5 @@
     <string name="view_store">가게 보기</string>
     <string name="get_direction">길찾기</string>
     <string name="upload_image">이미지 업로드</string>
+    <string name="store_list_title">가게 목록</string>
 </resources>
