--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="view_store">View Store</string>
     <string name="get_direction">Get Direction</string>
     <string name="upload_image">Upload Image</string>
+    <string name="store_list_title">Store List</string>
 </resources>
