--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -38,4 +38,10 @@
     <string name="get_direction">道順を取得</string>
     <string name="upload_image">画像をアップロード</string>
     <string name="store_list_title">店舗一覧</string>
+    <string name="edit_store">店舗情報を編集</string>
+    <string name="save_changes">変更を保存</string>
+    <string name="change_password">パスワードを変更する</string>
+    <string name="current_password">現在のパスワード</string>
+    <string name="new_password">新しいパスワード</string>
+    <string name="confirm_password">パスワードを確認</string>
 </resources>
