--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -4,16 +4,16 @@
     <string name="Entrance">エントランス</string>
     <string name="right_wing">右ウィング</string>
     <string name="hallway">廊下</string>
-    <string name="add_store_title">ストアを追加</string>
-    <string name="hint_enter_store_name">ストア名を入力</string>
-    <string name="hint_store_category">ストアカテゴリ</string>
+    <string name="add_store_title">店舗を追加</string>
+    <string name="hint_enter_store_name">店舗名を入力</string>
+    <string name="hint_store_category">店舗カテゴリー</string>
     <string name="hint_opening_time">開店時間</string>
     <string name="hint_closing_time">閉店時間</string>
     <string name="button_create">作成</string>
     <string name="open_time_label">開店時間:</string>
     <string name="close_time_label">閉店時間:</string>
     <string name="go_to_destination">目的地へ行く</string>
-    <string name="clear_path">パスを消去</string>
+    <string name="clear_path">経路を消去</string>
     <string name="login">ログイン</string>
     <string name="email">Eメール</string>
     <string name="password">パスワード</string>
@@ -26,7 +26,6 @@
     <string name="fragment_group_chat">グループチャット</string>
     <string name="fragment_profile">プロフィール</string>
     <string name="fragment_main">メイン</string>
-
     <string name="profile_personal_detail">個人情報</string>
     <string name="profile_contact_us">お問い合わせ</string>
     <string name="profile_privacy_security">プライバシーとセキュリティ</string>
@@ -34,18 +33,24 @@
     <string name="profile_logout">ログアウト</string>
     <string name="bottom_nav_list">リスト</string>
     <string name="bottom_nav_messages">メッセージ</string>
-    <string name="view_store">ストアを表示</string>
+    <string name="bottom_nav_stores">店舗</string>
+    <string name="view_store">店舗を見る</string>
     <string name="get_direction">道順を取得</string>
     <string name="upload_image">画像をアップロード</string>
-    <string name="store_list_title">店舗一覧</string>
-    <string name="edit_store">店舗情報を編集</string>
+    <string name="store_list_title">店舗リスト</string>
+    <string name="edit_store">店舗を編集</string>
     <string name="save_changes">変更を保存</string>
-    <string name="change_password">パスワードを変更する</string>
+    <string name="change_password">パスワードを変更</string>
     <string name="current_password">現在のパスワード</string>
     <string name="new_password">新しいパスワード</string>
     <string name="confirm_password">パスワードを確認</string>
+    <string name="forgot_password">パスワードをお忘れですか？</string>
     <string name="edit">編集</string>
     <string name="delete">削除</string>
-    <string name="opening_time">開店:</string>
-    <string name="closing_time">閉店:</string>
+    <string name="opening_time">開店時間:</string>
+    <string name="closing_time">閉店時間:</string>
+    <string name="store_status">ステータス:</string>
+    <string name="store_status_open">営業中</string>
+    <string name="store_status_closed">休業中</string>
+    <string name="first_gulay_store">最初のグラーストア</string>
 </resources>
