--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -26,26 +26,31 @@
     <string name="fragment_group_chat">그룹 채팅</string>
     <string name="fragment_profile">프로필</string>
     <string name="fragment_main">메인</string>
-
     <string name="profile_personal_detail">개인 정보</string>
     <string name="profile_contact_us">문의하기</string>
-    <string name="profile_privacy_security">개인 정보 및 보안</string>
-    <string name="profile_preferences">환경 설정</string>
+    <string name="profile_privacy_security">개인정보 및 보안</string>
+    <string name="profile_preferences">환경설정</string>
     <string name="profile_logout">로그아웃</string>
     <string name="bottom_nav_list">목록</string>
     <string name="bottom_nav_messages">메시지</string>
+    <string name="bottom_nav_stores">가게들</string>
     <string name="view_store">가게 보기</string>
     <string name="get_direction">길찾기</string>
     <string name="upload_image">이미지 업로드</string>
     <string name="store_list_title">가게 목록</string>
-    <string name="edit_store">상점 편집</string>
-    <string name="save_changes">변경 사항 저장</string>
+    <string name="edit_store">가게 수정</string>
+    <string name="save_changes">변경사항 저장</string>
     <string name="change_password">비밀번호 변경</string>
     <string name="current_password">현재 비밀번호</string>
     <string name="new_password">새 비밀번호</string>
     <string name="confirm_password">비밀번호 확인</string>
-    <string name="edit">편집</string>
+    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
+    <string name="edit">수정</string>
     <string name="delete">삭제</string>
     <string name="opening_time">여는 시간:</string>
     <string name="closing_time">닫는 시간:</string>
+    <string name="store_status">상태:</string>
+    <string name="store_status_open">영업 중</string>
+    <string name="store_status_closed">닫음</string>
+    <string name="first_gulay_store">첫 번째 굴라이 가게</string>
 </resources>
