--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="store_list_title">Store List</string>
     <string name="bookmark_list_title">Bookmarks</string>
     <string name="add_to_favorite">Add to favorite</string>
+    <string name="remove_from_favorite">Remove</string>
     <string name="favorite">Favorite</string>
     <string name="edit_store">Edit Store</string>
     <string name="save_changes">Save Changes</string>
