--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="store_status_open">Open</string>
     <string name="store_status_closed">Closed</string>
     <string name="first_gulay_store">First Gulay Store</string>
+    <string name="profile_navigation_history">Navigation History</string>
     <string name="terms_and_conditions_content">"Welcome to PampangNav! By using our app, you agree to these terms. Please read them carefully.
 
 **1. Your Account**
